--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
             <version>1.37</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.aparapi</groupId>
+            <artifactId>aparapi</artifactId>
+            <version>2.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
